--- a/src/about.pug
+++ b/src/about.pug
@@ -57,9 +57,9 @@ block content
       )
 
   section.contact-block
-    .container
+    .contact-block__inner
       .contact-block__item
-        img(src="images/phone.svg" alt="alt" width="70" height="70")
+        img(src="images/phone.svg" alt="phone". width="70" height="70")
         .svg-wrapper
           +svg("wave-long-left").wave-long
           +svg("wave-name-left").wave-short
@@ -82,7 +82,7 @@ block content
         .svg-wrapper
           +svg("wave-name-right").wave-short
           +svg("wave-long-right").wave-long
-        img(src="images/email.svg" alt="alt" width="70" height="70")
+        img(src="images/email.svg" alt="email." width="70" height="70")
 
 
   section.section-tabs-team
@@ -103,11 +103,11 @@ block content
               <div>
                 <a href="tel:06-48224339">
                   <img src="images/phone.svg" alt="06-48224339" width="13" height="13" />
-                  06 - 29 557 606
+                  <span>06 - 29 557 606</span>
                 </a>
                 <a href="mailto:madelon@kiem-onderwijs.nl">
                   <img src="images/email.svg" alt="madelon@kiem-onderwijs.nl" width="13" height="13" />
-                  madelon@kiem-onderwijs.nl
+                  <span>madelon@kiem-onderwijs.nl</span>
                 </a>
               </div>
             `
