--- a/src/growth.pug
+++ b/src/growth.pug
@@ -255,20 +255,15 @@ block content
               a.link__more.growth-tabs__link-open(href="#")
                 span.link__more-title Plan een kennismaking
                 +svg("arrow-right-bold")
-
-  section.contact-block.interim
-    .container
+  section.contact-block.contact-block--growth
+    .contact-block__inner
       .contact-block__item
-        img(src="images/phone.svg" alt="alt" width="70" height="70")
+        img(src="images/phone.svg" alt="phone." width="70" height="70")
         .svg-wrapper
           +svg("wave-long-left").wave-long
           +svg("wave-name-left").wave-short
       .contact-block__title
-        h2
-          | Ontdek wat wij voor
-          span  jouw 
-          span  team 
-          |  kunnen betekenen. 
+        h2 Benieuwd waar jouw school staat?
         a.contact-block__phone(href="tel:#")
           | Bel &nbsp;
           span 020-001 0012
@@ -281,6 +276,6 @@ block content
         .svg-wrapper
           +svg("wave-name-right").wave-short
           +svg("wave-long-right").wave-long
-        img(src="images/email.svg" alt="alt" width="70" height="70")
-            
+        img(src="images/email.svg" alt="email." width="70" height="70")
+
 
