--- a/src/interim.pug
+++ b/src/interim.pug
@@ -55,9 +55,9 @@ block content
       )
   
   section.contact-block.interim
-    .container
+    .contact-block__inner
       .contact-block__item
-        img(src="images/phone.svg" alt="alt" width="70" height="70")
+        img(src="images/phone.svg" alt="phone." width="70" height="70")
         .svg-wrapper
           +svg("wave-long-left").wave-long
           +svg("wave-name-left").wave-short
@@ -79,5 +79,5 @@ block content
         .svg-wrapper
           +svg("wave-name-right").wave-short
           +svg("wave-long-right").wave-long
-        img(src="images/email.svg" alt="alt" width="70" height="70")
+        img(src="images/email.svg" alt="email." width="70" height="70")
   
