--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -1,5 +1,5 @@
 header.header
-  .container.container-sm
+  .container
     .header__inner
       .header__inner-wrap
         a.header__logo(href="/")
