--- a/src/scss/components/container.scss
+++ b/src/scss/components/container.scss
@@ -19,6 +19,12 @@
   }
 }
 
+.container-sm {
+  @include desktop-l {
+    padding-inline: 320px;
+  }
+}
+
 .container--fluid {
   max-width: 100%;
 }
