--- a/src/scss/pages/contact.scss
+++ b/src/scss/pages/contact.scss
@@ -1,4 +1,4 @@
-.page-header.contact {
+.contact {
   margin-bottom: 65px;
   margin-top: 34px;
 
@@ -8,28 +8,40 @@
   }
 }
 
-.contact .page-header__text {
+.contact__inner {
+  display: flex;
+  flex-direction: column;
+
+  @include desktop {
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+.contact__text {
   width: 100%;
+
+  @include desktop {
+    width: 390px;
+  }
 
   h1 {
     letter-spacing: -1px;
+
+    @include desktop {
+      letter-spacing: -1.6px;
+      margin-bottom: 32px;
+    }
   }
 
   p {
     width: 100%;
     margin-top: 20px;
     margin-bottom: 32px;
-  }
 
-  @include desktop {
-    margin-right: 20px;
-    width: 390px;
-
-    h1 {
-      letter-spacing: -1.6px;
-    }
-
-    p {
+    @include desktop {
       width: 100%;
       margin-top: 40px;
       margin-bottom: 48px;
@@ -42,6 +54,12 @@
   width: 100%;
   justify-content: flex-start;
   font-size: 16px;
+  font-family: $font-secondary;
+  font-variation-settings: "wght" 700;
+
+  @include desktop {
+    font-size: 20px;
+  }
 
   svg {
     margin-left: 0;
@@ -56,13 +74,9 @@
     text-decoration: underline;
     color: $color-orange;
   }
-
-  @include desktop {
-    font-size: 20px;
-  }
 }
 
-.page-header__form {
+.contact__form {
   display: flex;
   flex-direction: column;
   margin-top: 48px;
@@ -70,6 +84,14 @@
   width: 100%;
   height: fit-content;
 
+  @include desktop {
+    margin-top: 41px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px 45px;
+    margin-top: 10px;
+    width: 55.7%;
+  }
 
   .form-group {
     flex-direction: column;
@@ -80,19 +102,10 @@
     margin-bottom: 10px;
   }
 
-  button {
+  .button {
     width: fit-content;
-  }
 
-  @include desktop {
-    margin-top: 41px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 30px 45px;
-    margin-top: 10px;
-    width: 55.7%;
-
-    button {
+    @include desktop {
       margin-top: 0;
     }
   }
