--- a/src/scss/components/article.scss
+++ b/src/scss/components/article.scss
@@ -72,6 +72,11 @@ article ol {
   font-weight: 700;
 }
 
+article ol,
+article ul {
+  padding-left: 30px;
+}
+
 article ol b {
   font-weight: 700;
 }
