--- a/src/scss/components/contact-block.scss
+++ b/src/scss/components/contact-block.scss
@@ -1,32 +1,35 @@
 .contact-block {
   padding: 35px 0;
+  max-width: 640px;
+  margin-inline: auto;
 
   @include desktop {
     padding: 54px 0;
+    max-width: 1920px;
   }
 }
 
-.contact-block .container {
+.contact-block__inner {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  height: 215px;
   position: relative;
-
-  @media (min-width: 460px) {
-    width: 400px;
-  }
-
-  @media (min-width: 1200px) and (max-width: 1880px) {
-    width: 1100px;
-  }
+  margin-inline: auto;
 
   @media (min-width: 1880px) {
     height: fit-content;
-    margin-top: 100px;
     width: 100%;
   }
 }
+
+.contact-block.contact-block--growth {
+
+  @include desktop-l {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+}
+
 
 .contact-block__item {
   display: flex;
@@ -143,7 +146,7 @@
     img {
       width: 78px;
       height: 79px;
-      margin-top: 10px;
+      margin-top: 15px;
     }
 
     .svg-wrapper {
@@ -244,15 +247,15 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
-  width: 200px;
+  max-width: 200px;
 
-  @media (min-width: 1200px) and (max-width: 1880px) {
-    width: 353px;
+  @media (min-width: 1200px) {
+    max-width: 353px;
     justify-content: center;
   }
 
   @media (min-width: 1880px) {
-    width: 653px;
+    max-width: 550px;
     justify-content: center;
   }
 }
