--- a/src/scss/components/tabs.scss
+++ b/src/scss/components/tabs.scss
@@ -1,23 +1,51 @@
 .tabs-main {
   margin-top: 28px;
-  position: relative;
+
+  @include desktop {
+    margin-top: 73px;
+  }
 
   svg {
-    color: $color-orange;
+    top: 17px;
     width: 34px;
     height: 34px;
-    position: absolute;
-    top: 168px;
-    left: calc(50% - 17px);
+    margin: 0 auto;
+    position: relative;
+    z-index: 1;
+    color: $color-orange;
+
+    @include desktop {
+      top: 26.5px;
+      width: 53px;
+      height: 53px;
+    }
   }
 
   h2 {
     text-align: center;
     color: $color-secondary;
-    margin-bottom: 30px;
+    margin-bottom: 0;
     font-weight: 700;
     font-size: 20px;
     letter-spacing: 0;
+
+    @include desktop {
+      font-size: 20px;
+      letter-spacing: 0;
+      margin-bottom: -10px;
+    }
+  }
+
+  h3 {
+    @include desktop {
+      font-size: 40px;
+      color: $color-secondary;
+      font-weight: 700;
+      margin-top: 0;
+      letter-spacing: -1px;
+      margin-bottom: 32px;
+    }
+
   }
 
   img.hidden-desktop {
@@ -27,31 +55,7 @@
     margin-bottom: 27px;
   }
 
-  @include desktop {
-    margin-top: 73px;
 
-    h2 {
-      font-size: 20px;
-      margin-bottom: 44px;
-      letter-spacing: 0;
-    }
-
-    svg {
-      top: 40px;
-      width: 53px;
-      height: 53px;
-      left: calc(50% - 26.5px);
-    }
-
-    h3 {
-      font-size: 40px;
-      color: $color-secondary;
-      font-weight: 700;
-      margin-top: 0;
-      letter-spacing: -1px;
-      margin-bottom: 32px;
-    }
-  }
 }
 
 .tabs-container {
@@ -59,51 +63,54 @@
   border-radius: 30px;
   background-color: $color-floralwhite;
   padding: 0;
-
-  @include desktop {
-    padding: 80px 165px;
-  }
 }
 
-.tab-content-desktop {
-  flex-direction: row;
-  justify-content: space-between;
-  position: relative;
-}
+// .tab-content-desktop {
+//   flex-direction: row;
+//   justify-content: space-between;
+//   position: relative;
+// }
 
-.tab-content-desktop .tab-content__item {
-  max-width: 36%;
-}
+// .tab-content-desktop .tab-content__item {
+//   max-width: 36%;
+// }
 
 .tab-content__centered {
-  display: flex;
-  justify-content: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  width: 20%;
-  margin: 0 auto;
-  height: 100%;
+  display: none;
 
-  &::before {
-    content: "";
+  @include desktop {
+    display: flex;
+    justify-content: center;
     position: absolute;
     top: 0;
-    right: 0;
     left: 0;
+    right: 0;
+    width: 20%;
     margin: 0 auto;
     height: 100%;
-    width: 2px;
-    background-color: $color-primary;
+  }
+
+  &::before {
+    @include desktop {
+      content: "";
+      position: absolute;
+      top: 50px;
+      right: 0;
+      left: 0;
+      margin: 0 auto;
+      height: calc(100% - 130px);
+      width: 1px;
+      bottom: 60px;
+      margin: auto;
+      background-color: $color-primary;
+    }
   }
 
   img {
-    position: absolute;
-    top: 80px;
-    padding-bottom: 20px;
-
     @include desktop {
+      position: absolute;
+      top: 135px;
+      padding-bottom: 20px;
       background-color: $color-floralwhite;
     }
   }
@@ -142,14 +149,29 @@
 }
 
 .tab-content-laptop {
+  position: relative;
   width: 100%;
   height: fit-content;
   padding: 32px 40px;
+
+  @include desktop {
+    display: flex;
+    justify-content: space-between;
+    padding: 40px 80px;
+  }
+
+  @include desktop-l {
+    padding: 85px 160px;
+  }
 }
 
 .tab-content-laptop .tab-content__item {
   max-width: 100%;
   display: none;
+
+  @include desktop {
+    display: block;
+  }
 
   &[aria-expanded='true'] {
     display: block;
@@ -158,7 +180,12 @@
   h3 {
     font-size: 28px;
     margin-top: 8px;
-    margin-bottom: 13px;
+    margin-bottom: 30px;
+    margin-top: 0;
+
+    @include desktop {
+      font-size: 40px;
+    }
   }
 }
 
@@ -209,7 +236,7 @@
     position: absolute;
     top: 10px;
     left: calc(50% - 75px);
-    z-index: 2;
+    z-index: 5;
 
     svg {
       width: 53px;
@@ -233,6 +260,19 @@
   flex-direction: row;
   justify-content: space-around;
   z-index: 3;
+
+  &:before {
+    @include desktop {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 409px;
+      background-color: $color-floralwhite;
+      border-radius: 30px;
+      z-index: -11;
+      top: 70px
+    }
+  }
 }
 
 .tabs__toggle-img {
@@ -271,16 +311,6 @@
   }
 }
 
-.tabs__toggle-rectangle {
-  position: absolute;
-  width: 100%;
-  height: 409px;
-  background-color: $color-floralwhite;
-  border-radius: 30px;
-  z-index: 1;
-  top: 70px
-}
-
 .tabs__toggle-img {
   background-color: transparent;
 }
@@ -315,6 +345,7 @@
 
   a {
     display: flex;
+    align-items: center;
     flex-direction: row;
     text-decoration: none;
     font-family: $font-primary;
@@ -345,7 +376,7 @@
   }
 
   @include desktop {
-    width: 44%;
+    width: 46%;
     margin-top: 70px;
 
     h3 {
@@ -358,9 +389,12 @@
   width: 100%;
   max-width: 100%;
 
-  @include laptop {
-    width: 45%;
-    max-width: 45%;
+  @include desktop {
+    width: 32.5%;
+  }
+
+  @include desktop-l {
+    width: 37.5%;
   }
 }
 
@@ -376,12 +410,32 @@
     width: 57px;
     height: 50px;
     background-color: transparent;
+
+    @include laptop {
+      width: 105px;
+      height: 110px;
+    }
+
+    @include desktop {
+      width: 165px;
+      height: 150px;
+    }
   }
 
   svg {
     height: 47px;
     transition: color 0.3s ease;
     color: $color-muted;
+
+    @include laptop {
+      height: 100px;
+    }
+
+    @include desktop {
+      width: 150px;
+      height: 132px;
+      color: $color-primary;
+    }
   }
 
   span {
@@ -391,40 +445,12 @@
     font-size: 18px;
     font-weight: 700;
     transition: color 0.3s ease;
-  }
 
-  @include laptop {
-    .svg-wrapper {
-      width: 105px;
-      height: 110px;
-    }
-
-    svg {
-      height: 100px;
-    }
-
-    span {
+    @include laptop {
       font-size: 26px;
     }
-  }
 
-  @include desktop {
-    flex-direction: row;
-    width: fit-content;
-    align-items: center;
-
-    .svg-wrapper {
-      width: 165px;
-      height: 150px;
-    }
-
-    svg {
-      width: 150px;
-      height: 132px;
-      color: $color-primary;
-    }
-
-    span {
+    @include desktop {
       position: relative;
       width: fit-content;
       height: fit-content;
@@ -433,6 +459,13 @@
       font-weight: 700;
       color: $color-primary;
     }
+  }
+
+
+  @include desktop {
+    flex-direction: row;
+    width: fit-content;
+    align-items: center;
   }
 }
 
