--- a/src/scss/pages/about.scss
+++ b/src/scss/pages/about.scss
@@ -43,8 +43,8 @@
   max-width: 100%;
   width: 100%;
   margin-top: 26px;
-
-
+  object-fit: cover;
+  border-radius: 15px;
 
   @include desktop {
     width: 50%;
