--- a/src/scss/pages/growth.scss
+++ b/src/scss/pages/growth.scss
@@ -108,16 +108,34 @@
   }
 }
 
-// tabs
-.section-growth__tabs-desktop {
-  position: relative;
+// growth__tabs
+
+.growth__tabs{
   width: 100%;
-  flex-direction: row;
-  justify-content: space-between;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+
+  &.is-active{
+    height: fit-content;
+  }
+
+  @media (min-width: 1200px) and (max-width: 1400px){
+    &.is-active{
+      height: 1180px;
+    }
+  }
+
+  @media (min-width: 1401px){
+    &.is-active{
+      height: 1030px;
+    }
+  }
 }
 
 .section-growth__tabs-title {
-  margin-top: 68px;
+  margin-top: 48px;
   margin-bottom: 33px;
   margin-left: auto;
   margin-right: auto;
@@ -135,27 +153,43 @@
   }
 }
 
-.growth-tabs__item {
-  width: 23%;
-}
-
-.growth-tabs__item.is-open {
-  height: 950px;
-}
-
-.growth-tabs__item-close {
+.growth__tabs-nav{
+  display: flex;
+  flex-direction: row;
   width: 100%;
-  height: 446px;
-  background-color: $color-floralwhite;
-  border-radius: 30px;
-  padding: 30px;
+  height: fit-content;
+  gap: 1%;
+  justify-content: space-around;
+  border-bottom: 2px solid $color-primary;
+
+  @media (max-width: 450px){
+    justify-content: space-between;
+  }
+
+  @include desktop{
+    justify-content: space-between;
+    border-bottom: 1px solid transparent;
+  }
+}
+
+.growth__nav-item{
+  width: fit-content;
+  height: fit-content;
+  background-color: transparent;
+  border-radius: 0px;
+  padding: 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
   cursor: pointer;
+  transition: background-color 0.5s;
+  
+  &.is-active{
+    background-color: transparent;
+  }
 
-  @media (max-width: 1448px) {
+  @media (min-width: 1200px) and (max-width: 1500px) {
     p {
       font-size: 12px;
       width: 100%;
@@ -163,19 +197,53 @@
 
     height: 346px;
   }
+
+  @include laptop{
+    width: 15%;
+    height: fit-content;
+  }
+
+  @include desktop{
+    width: 100%;
+    height: 446px;
+    background-color: $color-floralwhite;
+    border-radius: 30px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+    transition: background-color 0.5s;
+    
+    &.is-active{
+      background-color: $color-primary;
+    }
+  }
 }
 
-.growth-tabs__icon {
-  width: 70px;
-  height: 70px;
+.growth__nav-circle {
+  width: 40px;
+  height: 40px;
   color: $color-primary;
+
+  @include laptop{
+    width: 100%;
+    height: fit-content;
+  }
+
+  @include desktop{
+    width: 70px;
+    height: 72px;
+  }
 }
 
-.growth-tabs__title-close {
+.growth__nav-title {
   color: $color-text-secondary;
   font-size: 20px;
   line-height: 1.3;
   text-align: center;
+  flex-direction: column;
 
   span {
     font-weight: 700;
@@ -183,14 +251,14 @@
   }
 }
 
-.growth-tabs__subtitle-close {
+.growth__nav-subtitle {
   color: $color-text-secondary;
   margin-top: 6px;
   text-align: center;
 }
 
-.growth-tabs__arrow-close,
-.growth-tabs__arrow-open {
+.growth__nav-arrow,
+.growth__content-arrow {
   position: absolute;
   bottom: 30px;
   right: 30px;
@@ -200,27 +268,45 @@
   cursor: pointer;
 }
 
-.growth-tabs__item-open {
+.growth__tabs-content{
+  position: relative;
   width: 100%;
-  height: 659px;
-  background-color: $color-floralwhite;
-  border: 3px solid $color-primary;
-  border-radius: 0px 0px 15px 15px;
-  padding: 62px 173px 45px 75px;
-  position: absolute;
-  z-index: 5;
-  top: 120px;
-  left: 0;
-  display: none;
 
-  @media (max-width: 1919px) {
-    height: fit-content;
-    top: 113px;
-    padding: 62px 75px 45px 75px;
+  @include desktop{
+    position: absolute;
+    width: 100%;
+    top: 375px;
+    left: 0;
   }
 }
 
-.growth-tabs__title-open {
+.growth__content-item{
+  display: none;
+
+  &.is-visible{
+    padding-top: 20px;
+    display: block;
+    position: relative;
+  }
+
+  @include desktop{
+    &.is-visible{
+      width: 100%;
+      height: fit-content;
+      background-color: $color-floralwhite;
+      border: 3px solid $color-primary;
+      border-radius: 0px 0px 15px 15px;
+      padding: 62px 173px 45px 75px;
+      z-index: 5;
+
+      @media (max-width: 1919px) {
+        padding: 62px 75px 45px 75px;
+      }
+    }
+  }
+}
+
+.growth__content-title {
   color: $color-text-secondary;
   margin-bottom: 9px;
   font-size: 20px;
@@ -236,7 +322,7 @@
   }
 }
 
-.growth-tabs__subtitle-open {
+.growth__content-subtitle {
   color: $color-text-secondary;
   margin-top: 0;
   margin-bottom: 17px;
@@ -246,9 +332,9 @@
   }
 }
 
-.growth-tabs__content-open {
+.growth__content-article {
   border-top: 1px solid $color-primary;
-  columns: 2;
+  columns: 1;
   column-gap: 146px;
   padding-top: 16px;
 
@@ -268,69 +354,12 @@
 
   @include desktop {
     padding-top: 45px;
+    columns: 2;
   }
 }
 
-.growth-tabs__link-open {
-  @include desktop {
-    position: absolute;
-    bottom: 35px;
-  }
-}
-
-.growth-tabs__item.is-open .growth-tabs__item-open {
-  display: block;
-}
-
-.growth-tabs__item.is-open .growth-tabs__item-close {
-  background-color: $color-primary;
-}
-
-// tabs-mobile
-
-.section-growth__tabs-mobile {
-  flex-direction: column;
-}
-
-.growth-tabs__toggle {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  justify-content: space-between;
-
-  @include desktop {
-    justify-content: space-around;
-  }
-}
-
-.growth-toggle__item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 18%;
-
-  svg {
-    width: 43px;
-    height: 43px;
-    color: $color-muted;
-  }
-
-  @include tablet {
-    svg {
-      width: 60px;
-      height: 60px;
-      color: $color-muted;
-    }
-  }
-
-  @include desktop {
-    width: 23%;
-
-    svg {
-      width: 70px;
-      height: 70px;
-    }
-  }
+.growth__content-link {
+  margin-top: 30px;
 }
 
 .growth-toggle__triangle::after {
@@ -343,68 +372,19 @@
   border-left: 8px solid transparent;
   border-right: 8px solid transparent;
   border-bottom: 13px solid $color-primary;
+  transition: all 0.5s;
 
   opacity: 0;
 
-}
-
-.growth-tabs__text {
-  padding-top: 20px;
-  border-top: 2px solid $color-primary;
-  display: none;
-
-  @include desktop {
-    padding-top: 30px;
+  @include laptop{
+    border-left: 14px solid transparent;
+    border-right: 14px solid transparent;
+    border-bottom: 20px solid $color-primary;
   }
 }
 
-.growth-tabs__text .growth-tabs__content-open {
-  columns: 1;
-  border-top: 2px solid $color-primary;
-}
-
-.growth-tabs__text .growth-tabs__link-open {
-  margin-top: 23px;
-}
-
-.growth-tabs__text.is-open {
-  display: block;
-}
-
-.growth-toggle__item svg:hover {
-  cursor: pointer;
-}
-
-.growth-toggle__item.is-active {
-  svg {
-    color: $color-primary;
-  }
-
-  .growth-toggle__triangle::after {
-    opacity: 1;
-  }
-}
-
-.page-phone.growth {
-  margin-top: 40px;
-  margin-bottom: 60px;
-
-  @media (max-width: 500px) {
-    margin-top: -10px;
-  }
-
-  @media (min-width: 1200px) and (max-width: 1350px) {
-    svg.visible-desktop {
-      width: 130px;
-    }
-  }
-
-}
-
-.page-phone .container.container-md {
-  @include desktop {
-    padding: 0;
-  }
+.growth__nav-item.is-active .growth-toggle__triangle::after {
+  opacity: 1;
 }
 
 // contact-block
