--- a/src/growth.pug
+++ b/src/growth.pug
@@ -93,7 +93,7 @@ block content
                 | Groeien in
                 span  kennis
               p.growth__content-subtitle Workshops, trainingen en verdieping in basisvaardigheden, EDI en formatief handelen.
-              article.growth__content-article
+              article.article.growth__content-article
                 p Versterk je fundament. Groei begint bij wat je weet én wat je ermee doet. Sterk onderwijs vraagt om actuele vakkennis en didactische vaardigheden.
                 p Met KIEM vergroot je de expertise binnen jouw team en leg je een stevige basis voor betere resultaten. Wij maken leren praktisch: direct toepasbaar in de klas, met concrete handvatten.
                 p Wat we bieden:
@@ -112,7 +112,7 @@ block content
                 | Groeien in
                 span  inspirerend leiderschap
               p.growth__content-subtitle Visietrajecten en leiderschapsontwikkeling voor schoolleiders en teams
-              article.growth__content-article
+              article.article.growth__content-article
                 p Maak van ambitie een beweging. Groei door krachtig en verbindend leiderschap. Goed leiderschap maakt het verschil tussen plannen en echte verandering.
                 p Bij KIEM ondersteunen we schoolleiders en teamcoördinatoren om richting te geven, te inspireren en te bouwen aan professionele culturen waarin mensen willen groeien.
                 p Wat we bieden:
@@ -130,7 +130,7 @@ block content
                 | Groeien in
                 span  kennis
               p.growth__content-subtitle Workshops, trainingen en verdieping in basisvaardigheden, EDI en formatief handelen.
-              article.growth__content-article
+              article.article.growth__content-article
                 p Versterk je fundament. Groei begint bij wat je weet én wat je ermee doet. Sterk onderwijs vraagt om actuele vakkennis en didactische vaardigheden.
                 p Met KIEM vergroot je de expertise binnen jouw team en leg je een stevige basis voor betere resultaten. Wij maken leren praktisch: direct toepasbaar in de klas, met concrete handvatten.
                 p Wat we bieden:
@@ -149,7 +149,7 @@ block content
                 | Groeien in
                 span  kennis
               p.growth__content-subtitle Workshops, trainingen en verdieping in basisvaardigheden, EDI en formatief handelen.
-              article.growth__content-article
+              article.article.growth__content-article
                 p Versterk je fundament. Groei begint bij wat je weet én wat je ermee doet. Sterk onderwijs vraagt om actuele vakkennis en didactische vaardigheden.
                 p Met KIEM vergroot je de expertise binnen jouw team en leg je een stevige basis voor betere resultaten. Wij maken leren praktisch: direct toepasbaar in de klas, met concrete handvatten.
                 p Wat we bieden:
