--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -207,7 +207,7 @@ html(class=html.classList)&attributes(html.attrs)
         block content
       include ../pug/components/footer.pug
     block scripts
-      <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-      script(src!=`${baseDir}js/vendor.js?v=${Date.now()}`)
+      //- <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+      //- script(src!=`${baseDir}js/vendor.js?v=${Date.now()}`)
       script(src!=`${baseDir}js/main.js?v=${Date.now()}`)
     block body-end
